# parsing_ozon

./: .gitignore  README.md  async_parse.py  docker-compose.yml  local_run.ipynb  makefile  pyproject.toml
bot/: __main__.py  config.py
bot/dependencies/: __init__.py  deps.py
bot/handlers/: __init__.py  handlers.py
bot/keyboard/: __init__.py  kb.py
bot/misc/: __init__.py  bot_commands.py  misc.py
bot/services/: __init__.py  pymongo_service.py
detector/: config.py  main.py
detector/dependencies/: __init__.py  deps.py
detector/misc/: __init__.py  misc.py
detector/routers/: __init__.py  model_router.py  mongo_router.py
detector/schemas/: __init__.py  schemas.py
detector/services/: __init__.py  model_service.py  mongo_service.py
docker/: bot.Dockerfile  detector.Dockerfile  lab.Dockerfile  parser.Dockerfile
parser/: config.py  main.py
parser/dependencies/: __init__.py  deps.py
parser/routers/: __init__.py  parser_router.py
parser/schemas/: __init__.py  schemas.py
parser/services/: __init__.py  parser_service.py
scripts/: download_model.py  download_pic.py
