[tool.poetry]
name = "parse-ozon"
version = "0.1.0"
description = ""
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"


[tool.poetry.group.guru.dependencies]
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[tool.poetry.group.play.dependencies]
pytest-playwright = "^0.4.3"


[tool.poetry.group.model.dependencies]
torch = {version = "^2.1.2+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.16.2+cpu", source = "pytorch-cpu"}
torchaudio = {version = "^2.1.2+cpu", source = "pytorch-cpu"}
transformers = "^4.36.2"
huggingface-hub = "^0.20.2"


[tool.poetry.group.base.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
celery = "^5.3.6"
redis = "^5.0.1"
aiohttp = "^3.9.1"
python-multipart = "^0.0.6"



[tool.poetry.group.bot.dependencies]
aiogram = "^3.3.0"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
